--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ body.correct {
     border: 1px solid hsl(var(--hue), 100%, 20%);
     border-radius: 7px;
     padding: 5px 10px 5px;
-    color: white;
+    color: red;
     outline: none;
 }
 
@@ -68,7 +68,7 @@ body.correct {
 }
 
 .start-btn, .previous-btn, .next-btn{
-    font-size: 2px;
+    font-size: 20px;
     font-weight: bold;
     padding: 5px 10px 5px;
 }
@@ -78,7 +78,7 @@ body.correct {
     color: white;
 }
 
-.control-btns{
+.control-btns {
     display: flex;
     justify-content: center;
     align-items: center;
